# Vice

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
Ui/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Vice.Ui.csproj  app.manifest
Ui/Assets/: Icons.axaml
Ui/Controls/: ChangeLog.axaml  ChangeLog.axaml.cs  IconSelection.axaml  IconSelection.axaml.cs  KeybindListener.axaml  KeybindListener.axaml.cs  MessageBoxOk.axaml  MessageBoxOk.axaml.cs  MessageBoxYesNo.axaml  MessageBoxYesNo.axaml.cs  SidebarItem.axaml  SidebarItem.axaml.cs
Ui/Controls/Effects/: Effects.axaml  Effects.axaml.cs  NodeControl.axaml  NodeControl.axaml.cs  NodeEditor.axaml  NodeEditor.axaml.cs
Ui/Converters/: InvertBoolConverter.cs
Ui/Pages/: Channels.axaml  Channels.axaml.cs  Effects.axaml  Effects.axaml.cs  Performance.axaml  Performance.axaml.cs  Settings.axaml  Settings.axaml.cs  Sfxs.axaml  Sfxs.axaml.cs
Ui/Pages/Channels/: Page.axaml  Page.axaml.cs
Ui/Pages/Effects/: Page.axaml  Page.axaml.cs
Ui/Pages/Performance/: Page.axaml  Page.axaml.cs
Ui/Pages/Settings/: Page.axaml  Page.axaml.cs
Ui/Pages/Sfxs/: Page.axaml  Page.cs
Ui/Utils/: InvokeRequest.cs  SettingsClass.cs
docs/: Contributing.md  Roadmap.md
flutter/lib/: invoke_js.dart  window.dart
flutter/lib/blocks/: view.dart
flutter/lib/channels/: edit_page.dart  main_page.dart  new_page.dart
src/: files.rs  funcs.rs  lib.rs  log.rs  ui.rs
src/audio/: audio.cpp  blocks.hpp  mod.rs
src/performance/: mod.rs
src/ui/: mod.rs  opener.cpp
updater/src/: main.rs
(+11 files in other folders)
