[package]
name = "Vice"
version = "4.0.0"
description = "A Tauri App"
authors = ["GlowyDev"]
edition = "2021"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
incremental = true
codegen-units = 256

[[bin]]
name = "Vice"
path = "src/main.rs"

[lib]
name = "vice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
cc = "1.2.38"
winres = "0.1.12"

[dependencies]
tray-icon = "0.21.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
once_cell = "1.21.3"
ico = "0.4.0"
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
global-hotkey = "0.7.0"
single-instance = "0.3.3"
chrono = "0.4"